Wed Mar  5 07:05:11 2003  Phil Mesnier  <mesnier_p@ociweb.com>

	* ace/ace-dll.icc:
	* ace/ace-lib.icc:
	* ace/ace.icc:
	* ace/ace_dll64.mak:
	* ace/ace_lib64.mak:

	Added codeset registry files to more makefiles.
	
Wed Mar  5 06:32:40 2003  Phil Mesnier  <mesnier_p@ociweb.com>

	* ace/Makefile.bor:
	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp:

	Added codeset registry files and fixed spelling error in Makefile.bor.
	
Wed Mar  5 06:10:48 2003  Phil Mesnier  <mesnier_p@ociweb.com>

       * ace/Makefile.bor: 

       Added codeset registry files to makefile.

Tue Mar 04 19:58:29 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/common/FileCharStream.cpp (determine_encoding): Commented
	  out the annoying debug information.  Users should get the
	  encoding information from this->getEncoding(), instead of
	  relying on the debug info.

	* ACEXML/common/LocatorImpl.cpp (reset): Remember to reset string
	  pointers to 0 after deleteing them.  Otherwise, a parser may
	  crash if it is used to parse a second file.

Tue Mar  4 17:39:31 2003  Steve Huston  <shuston@riverace.com>

        * docs/CE-status.txt: Updated to reflect the ACE 5.3 status of CE.

        * ace/ACE.cpp (execname): Try to locate ".exe" suffix without
          case sensitivity. Thanks to Kelly F. Hickel <kfh@mqsoftware.com>
          for reporting this. Also, when appending a suffix, append it to
          the name, not after the name's nul terminator.

        * ace/ACE.h: Clarified that the pointer returned, if allocated, is
          allocated using new[] and should be freed with delete[].

        * tests/ACE_Test.cpp:
        * tests/ACE_Test.dsp: New test for ACE methods. At this time, it tests
          the ACE::execname() method fixed above.

        * tests/Makefile:
        * tests/Makefile.bor:
        * tests/tests.dsw:
        * tests/tests.mpc:
        * tests/run_test.lst: Added ACE_Test.

Tue Mar  4 13:54:52 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Codeset_Registry.cpp: