@@ -36,7 +36,7 @@ execname_test (void)
   if (newname != prog1)   // Didn't find .exe correctly
     {
       ACE_ERROR ((LM_ERROR, ACE_TEXT ("Name %s, not %s\n"), newname, prog1));
-      delete [] newname;
+      delete [] ACE_const_cast (ACE_TCHAR *, newname);
       ++error_count;
     }
 
@@ -44,7 +44,7 @@ execname_test (void)
   if (newname != prog2)   // Didn't find .exe correctly
     {
       ACE_ERROR ((LM_ERROR, ACE_TEXT ("Name %s, not %s\n"), newname, prog2));
-      delete [] newname;
+      delete [] ACE_const_cast (ACE_TCHAR *, newname);
       ++error_count;
     }
 
@@ -56,7 +56,7 @@ execname_test (void)
       ++error_count;
     }
   else
-    delete [] newname;
+    delete [] ACE_const_cast (ACE_TCHAR *, newname);
 #endif /* ACE_WIN32 */
 
   return error_count;
