@@ -1,3 +1,11 @@
+Wed Mar  5 21:45:39 2003  Steve Huston  <shuston@riverace.com>
+
+	* ace/INET_Addr.cpp (get_port_number_from_name): Correct arg name
+	  for ACE_UNUSED_ARG. Suspected cut/paste error.
+
+	* tests/ACE_Test.cpp: const_cast the pointers returned from
+	  ACE::execname() so they can be deleted on MSVC6.
+
 Wed Mar  5 07:05:11 2003  Phil Mesnier  <mesnier_p@ociweb.com>
 
 	* ace/ace-dll.icc:
